Fix Bug 259358 - Re-ordering folders via drag & drop not working anymore

Order was not good because we looked at "row" but it's not the real order
The real order is defined by lessThan

=> create a temporary QMap to order list and create real order.

FIXED-IN: 4.8.1
BUG: 259358